manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-notifications-rss
  labels:
    app.kubernetes.io/name: github-notifications-rss
    app.kubernetes.io/part-of: github-notifications-rss
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: github-notifications-rss
      app.kubernetes.io/part-of: github-notifications-rss
      app.kubernetes.io/managed-by: kubectl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: github-notifications-rss
        app.kubernetes.io/part-of: github-notifications-rss
        app.kubernetes.io/managed-by: kubectl
    spec:
      serviceAccountName: github-notifications-rss
      automountServiceAccountToken: false
      containers:
        - name: github-notifications-rss
          image: rg.fr-par.scw.cloud/ko-public/github-notifications-rss-ec6a4b266e6e5644546d0534882e9554@sha256:d17376a69b0a36b5efeab73b19d0c04539ceb154f69c7a878e970acae38ac7fe
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - name: web
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2

---
apiVersion: v1
kind: Service
metadata:
  name: github-notifications-rss
  labels:
    app.kubernetes.io/name: github-notifications-rss
    app.kubernetes.io/part-of: github-notifications-rss
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: github-notifications-rss
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: github-notifications-rss
  labels:
    app.kubernetes.io/name: github-notifications-rss
    app.kubernetes.io/part-of: github-notifications-rss
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`github-notifications.k3s.local`)
      kind: Rule
      services:
        - name: github-notifications-rss
          port: 8080
